fix: visible full picture when zoomed scrolling, adapting link position to smaller pic size, not centered when closed

--- a/css/links.css
+++ b/css/links.css
@@ -3,65 +3,65 @@
     position: absolute;
 }
 #link1 {
-    left: 5px;
-    top: 80px;
-    width: 382px;
-    height: 270px;
+    left: calc(5px * 0.43);
+    top: calc(80px * 0.43);
+    width: calc(382px * 0.43);
+    height: calc(270px * 0.43);
 }
 #link2 {
-    left: 50px;
-    top: 400px;
-    width: 810px;
-    height: 44px;
+    left: calc(50px * 0.43);
+    top: calc(400px * 0.43);
+    width: calc(810px * 0.43);
+    height: calc(44px * 0.43);
 }
 
 #link3 {
-    left: 50px;
-    top: 444px;
-    width: 810px;
-    height: 44px;
+    left: calc(50px * 0.43);
+    top: calc(444px * 0.43);
+    width: calc(810px * 0.43);
+    height: calc(44px * 0.43);
 }
 
 #link4 {
-    left: 50px;
-    top: 488px;
-    width: 810px;
-    height: 44px;
+    left: calc(50px * 0.43);
+    top: calc(488px * 0.43);
+    width: calc(810px * 0.43);
+    height: calc(44px * 0.43);
 }
 
 #link5 {
-    left: 50px;
-    top: 532px;
-    width: 810px;
-    height: 44px;
+    left: calc(50px * 0.43);
+    top: calc(532px * 0.43);
+    width: calc(810px * 0.43);
+    height: calc(44px * 0.43);
 }
 
 #link6 {
-    left: 50px;
-    top: 576px;
-    width: 810px;
-    height: 44px;
+    left: calc(50px * 0.43);
+    top: calc(576px * 0.43);
+    width: calc(810px * 0.43);
+    height: calc(44px * 0.43);
 }
 
 #link7 {
-    left: 50px;
-    top: 620px;
-    width: 810px;
-    height: 44px;
+    left: calc(50px * 0.43);
+    top: calc(620px * 0.43);
+    width: calc(810px * 0.43);
+    height: calc(44px * 0.43);
 }
 
 #link8 {
-    left: 50px;
-    top: 664px;
-    width: 810px;
-    height: 44px;
+    left: calc(50px * 0.43);
+    top: calc(664px * 0.43);
+    width: calc(810px * 0.43);
+    height: calc(44px * 0.43);
 }
 
 #link9 {
-    left: 50px;
-    top: 708px;
-    width: 810px;
-    height: 44px;
+    left: calc(50px * 0.43);
+    top: calc(708px * 0.43);
+    width: calc(810px * 0.43);
+    height: calc(44px * 0.43);
 }
 
 
