--- a/css/preview.css
+++ b/css/preview.css
@@ -7,8 +7,8 @@
 }
 
 img {
-  width: 930px;
-  height: 877px;
+  width: 400px;
+  height: 377px;
   position: absolute;
 }
 
@@ -64,7 +64,7 @@ a:visited {
   /* Opera/IE 8+ */
 
   height: 100%;
-  max-width: 3721px;
+
   margin: auto;
   padding-top: 86px;
   padding-bottom: 20px;
@@ -234,10 +234,7 @@ nav a {
 .feature {
   padding: 0px;
   font-family: 'BebasNeueRegular', sans-serif;
-  /*
-  height: 1754px;
-  width: 1861px;
-  */
+
   background: white;
 }
 .feature h1,
